# hrms_pf_india

./: .gitignore  README.md  license.txt  pyproject.toml
docs/: README.md  client-demo-guide.md  production-demo-records.md  user-guide.md  vpf-setup-steps.md
hrms_pf_india/: hooks.py  modules.txt
hrms_pf_india/hrms_pf_india/: constants.py  install.py
hrms_pf_india/hrms_pf_india/setup/: custom_fields.py  demo_payroll.py  publish_docs.py  salary_components.py
hrms_pf_india/hrms_pf_india/tests/: test_pf_calculator.py  test_vpf_sync.py
hrms_pf_india/hrms_pf_india/utils/: pf_calculator.py  vpf_sync.py
hrms_pf_india/public/js/: employee_pf.js
