[project]
name = "hrms_pf_india"
authors = [
    { name = "Ascra Technologies", email = "admin@ascratech.com" }
]
description = "Per-employee EPF/VPF for HRMS"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
